fixed the header wrap issue

--- a/arda_db/browser/static/css/style.css
+++ b/arda_db/browser/static/css/style.css
@@ -24,7 +24,7 @@ header h1 {
 	margin: 0;
 	padding-top: 8px;
 	font-size: 45px;
-	font-family: Impact, Lato, sans-serif;
+	font-family: Impact, Times, Lato, sans-serif;
 	color: white;
 	display: inline-block;
 	position: absolute;
